--- a/BuilserverDebug/Base.lproj/Main.storyboard
+++ b/BuilserverDebug/Base.lproj/Main.storyboard
@@ -18,15 +18,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" text="Evironment variables: " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TCr-Rb-sW7">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Evironment variables: " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="TCr-Rb-sW7">
                                 <rect key="frame" x="16" y="64" width="343" height="583"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="TCr-Rb-sW7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bQL-gZ-1aa"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="TCr-Rb-sW7" secondAttribute="trailing" constant="16" id="kPU-qW-KYT"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="TCr-Rb-sW7" secondAttribute="bottom" constant="20" id="qgK-Jf-ZyT"/>
+                            <constraint firstItem="TCr-Rb-sW7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="xEt-6t-ITP"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="fSR-NK-Oqd"/>
